# vinaya-class.github.io

./: .chktexrc  .gitignore  00-introduction.html  00-pali-lessons.html  00-vinaya-class.html  01-killing-and-harming.html  02-stealing.html  03-sexual-conduct.html  04-lustful-conduct.html  05-women-1.html  06-attainments.html  06-false-speech.html  07-false-speech.html  07-robes-1.html  08-attainments.html  08-robes-1.html  09-kiccavatta.html  09-robes-2.html  10-misc-1.html  10-misc.html  11-food-1.html  12-food-2.html  12-money.html  13-money.html  13-women-2.html  14-arguments-1.html  14-food-2.html  15-arguments-1.html  15-arguments-2.html  16-arguments-3.html  16-dwellings.html  17-arguments-2.html  17-dwellings.html  18-bowls.html  18-sekhiyas-1.html  19-excuses.html  19-women-2.html  20-food-3.html  20-misc-2.html  20-misc.html  (+32 more)
assets/: attainments.mm  food.mm  np-23-tonics.mm  pr-1.mm  pr-2.mm  pr-3.mm  robes.mm  women.mm
docx/: 00-introduction.docx  01-killing-and-harming.docx  02-stealing.docx  03-sexual-conduct.docx  04-lustful-conduct.docx  05-women-1.docx  06-attainments.docx  06-false-speech.docx  07-false-speech.docx  07-robes-1.docx  08-attainments.docx  08-robes-1.docx  09-kiccavatta.docx  09-robes-2.docx  10-misc.docx  11-food-1.docx  12-food-2.docx  12-money.docx  13-money.docx  13-women-2.docx  14-arguments-1.docx  14-food-2.docx  15-arguments-1.docx  15-arguments-2.docx  16-arguments-3.docx  16-dwellings.docx  17-arguments-2.docx  17-dwellings.docx  18-bowls.docx  18-sekhiyas-1.docx  19-excuses.docx  19-women-2.docx  20-food-3.docx  20-misc.docx  (+14 more)
(+316 files in other folders)
